login and group creation almost finished

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 
-
+# debug token ---- F35FEB21-05A8-40AD-A830-C816057A0ECB
 # <=====dependencies====>
 dependencies:
   flutter:
