--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 
-# debug token ---- F35FEB21-05A8-40AD-A830-C816057A0ECB
 # <=====dependencies====>
 dependencies:
   flutter:
@@ -37,6 +36,8 @@ dependencies:
   pinput: ^2.2.7
   contacts_service: ^0.6.3
   shared_preferences: ^2.0.13
+  stream_chat_flutter: ^3.1.1
+  equatable: ^2.0.3
 # <=====dev_dependencies====>
 dev_dependencies:
   flutter_test:
